--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "type": "project",
   "require": {
-    "php": "7.2"
+    "php": "7.2 || 7.4.6"
    },
   "require-dev": {
     "mockery/mockery": "0.9.9",
